2007-03-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (dialog_init):
	* gsd-media-keys-window.c: (gsd_media_keys_window_is_valid),
	(initialize_alpha_mode):
	* gsd-media-keys-window.h: rebuild the media window if the state of
	composite has changed (fixes bug #408035)

2007-03-24  Jens Granseuer  <jensgr@gmx.net>

	* xrdb/Emacs.ad: don't set Emacs.mode-line.attributeBackground as it
	seems to cause problems with emacs 22 (closes bug #416823)

2007-03-22  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-dbus.c: (gnome_settings_server_init): don't crash if
	dbus connection is not available (part of bug #411504)

2007-03-20  Priit Laes  <plaes@svn.gnome.org>

	* gnome-settings-multimedia-keys.c: (do_media_action), (do_action): Added
	handler for media keybinding.
	* actions/acme.h: Add defines for media key.

	Introduces preferred media application support. Bug #362578.

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (dialog_show): fix multimedia
	window appearing in a different position when shown for the first time
	and thus causing a "jump" effect on the second (fixes bug #400915)

2007-02-28  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): ref
	the master track (fixes bug #412467)

2007-02-25  Jens Granseuer  <jensgr@gmx.net>

	* test-media-window.c: (test_window): fix compiler warning

2007-02-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-accessibility-keyboard.c:
	(gnome_settings_accessibility_keyboard_load): correctly pass the
	function address when setting up the event filter

2007-02-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-keybindings.c: (gnome_settings_keybindings_init):
	don't install the same filter twice for the default root window (fixes
	bug #408643)

2007-02-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-mouse.c: (configure_button_layout),