@@ -1,3 +1,11 @@
+2007-03-29  Priit Laes  <amd@store20.com>
+
+	* gnome-settings-multimedia-keys.c: (get_term_command), (execute),
+	(do_unknown_action), (do_help_action), (do_mail_action),
+	(do_media_action), (do_www_action), (do_exit_action), (do_eject_action),
+	(do_action): Fix launch application in terminal support. (closes bug
+	#362578).
+
 2007-03-26  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-settings-multimedia-keys.c: (dialog_init):
